# testing-rust-and-postgres

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/2021-02-09-040636_create_person/: up.sql
src/: main.rs  models.rs  schema.rs
